# competition-helper

./: .env.example  .gitignore  README.md  conmate_scenarios.md  docker-compose.dev.yml  index.html  package-lock.json  poster.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
.omc/sessions/: 120f91f8-ffc2-4086-b658-f251dd58e6a5.json  63ca049c-76b4-42ed-bca4-094c7135de9b.json
.omc/state/: agent-replay-6de91742-3a8d-43b4-8b70-46c264d0830e.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/63ca049c-76b4-42ed-bca4-094c7135de9b/: hud-state.json
.omc/state/sessions/6de91742-3a8d-43b4-8b70-46c264d0830e/: hud-state.json  session-started.json
deploy/: .dockerignore  docker-compose.yml
deploy/docker/: api.Dockerfile  nginx.conf  web.Dockerfile  worker.Dockerfile
deploy/helm/: README.md
deploy/helm/contest-helper/: Chart.yaml  values.yaml
deploy/helm/contest-helper/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  redis.yaml  secret.yaml  web-deployment.yaml  web-service.yaml  worker-deployment.yaml
deploy/helm/keenee/: Chart.yaml  values.yaml
deploy/helm/keenee/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  redis.yaml  secret.yaml  web-deployment.yaml  web-service.yaml  worker-deployment.yaml
deploy/terraform/: README.md  main.tf  outputs.tf  variables.tf
docs/: AGENT-GUIDE.md  BEGINNER-GUIDE.md  DESIGN-V2-대화형에이전트.md  FILE-MAP.md  FRONTEND-API.md  GITHUB-PUSH.md  PROJECT-OVERVIEW.md  PROJECT-STRUCTURE.md  TEAM-ONBOARDING.md  TECH-SPEC.md
docs/superpowers/plans/: 2026-06-25-milestone-1-foundation-api.md
docs/superpowers/specs/: 2026-06-25-gongmojeon-recommend-agent-mlops-design.md
libs/contest_helper_core/: pyproject.toml
libs/contest_helper_core/src/contest_helper_core/: __init__.py  competition_db.py  config.py  db.py  models.py  schemas.py
libs/keenee_core/: pyproject.toml
libs/keenee_core/src/keenee_core/: __init__.py  competition_db.py  config.py  db.py  models.py  schemas.py
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_init.py  0002_v2_chat_tasks.py  0003_workspace_progress.py
services/api/src/app/: __init__.py  deps.py  main.py  queue.py
services/api/src/app/auth/: __init__.py  oauth.py  router.py  service.py
services/api/src/app/chat/: __init__.py  queue.py  router.py
services/api/src/app/competitions/: __init__.py  repository.py  router.py
services/api/src/app/recommend/: __init__.py  router.py
services/api/src/app/workspaces/: __init__.py  router.py  service.py
services/api/tests/: conftest.py  test_chat.py  test_competitions.py  test_health.py  test_recommend.py  test_workspaces.py
services/web/: .env.example  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
services/web/src/: App.jsx  App.tsx  index.css  main.tsx
services/web/src/api/: client.ts  endpoints.ts  types.ts
services/web/src/components/: ErrorBanner.tsx  Loading.tsx  NavBar.tsx  NotificationToast.jsx  RecommendationCard.tsx
services/web/src/components/workspace/: ContestInfoSection.jsx  Dashboard.jsx  Header.jsx  InsightsSection.jsx  LogSection.jsx  ReportSection.jsx  ScheduleSection.jsx  Sidebar.jsx  TaskSection.jsx
services/web/src/data/: mockChat.js
services/web/src/hooks/: useAuth.ts  useChat.ts  useRecommendJob.ts
services/web/src/pages/: Chat.jsx  Chat.tsx  Interests.tsx  Login.tsx  MemberSelect.jsx  Plan.tsx  Recommend.tsx  Workspace.jsx  Workspace.tsx
services/web/src/styles/: chat.css
services/web/tests/: Chat.test.tsx  Recommend.test.tsx
services/worker/: Dockerfile  pyproject.toml
services/worker/src/worker/: README.md  __init__.py  agent.py  competition_agent.py  embed_job.py  llm.py  main.py  progress_agent.py  rag.py  search_filters.py  style.py  team_fit.py
services/worker/src/worker/mcp_tools/: __init__.py  competitions.py  progress.py  registry.py  semantic.py  tasks.py  web_search.py
services/worker/tests/: conftest.py  test_agent.py  test_agent_chat.py  test_chat_loop.py  test_competition_agent.py  test_intent_classification.py  test_main_loop.py  test_mcp_tools.py  test_plan_replace.py  test_progress.py  test_rag.py  test_recommend_flow.py  test_scenario_fixes.py  test_tasks_tool.py  test_team_fit.py  test_workspace_edit.py  test_workspace_flow.py
src/components/workspace/: MeetingSection.jsx  TaskSection.jsx
src/data/: mockWorkspace.js
src/pages/: Workspace.jsx
src/styles/: chat.css  workspace.css
