[project]
name = "contest-helper-core"
version = "0.0.0"
description = "contest-helper 공유 계약 계층: 모델·DB 엔진·통신 스키마·설정"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pgvector>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contest_helper_core"]
