[project]
name = "contest-helper-worker"
version = "0.0.0"
description = "contest-helper agent-worker: 비동기 LLM 에이전트 런타임 (큐 소비·추천 생성)"
requires-python = ">=3.12"
dependencies = [
    "contest-helper-core",
    "redis>=5",
    "google-genai>=0.3",
    "ddgs>=9.14.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

# uv workspace: 공유 계약 계층(contest_helper_core)을 로컬 멤버로 해석.
[tool.uv.sources]
contest-helper-core = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
